--- a/peerinst/templates/registration/test.html
+++ b/peerinst/templates/registration/test.html
@@ -52,7 +52,7 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
 
 <main class="mdc-toolbar-fixed-adjust">
   <section>
-    <h1 class="mdc-typography--display3 mdc-theme--background">Introduction</h1>
+    <h1 class="mdc-typography--display3 mdc-theme--background mdc-elevation--z2">Introduction</h1>
     <h2 class="mdc-typography--headline">History</h2>
     <p class="mdc-typography--body1">
       Peer Instruction, popularized by Eric Mazur of Harvard University, is one of the most prevalent classroom activities today. Something fascinating happens during these peer discussions, whereby students can convince each other of the correct thinking. But what about instances when the class size is too small for diversity of answers, or the teacher wants to have students prepare for class using a similar approach? This is where DALITE was born!
@@ -64,7 +64,7 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
   </section>
 
   <section>
-    <h1 class="mdc-typography--display3 mdc-theme--background">Features</h1>
+    <h1 class="mdc-typography--display3 mdc-theme--background mdc-elevation--z2">Features</h1>
     <h2 class="mdc-typography--headline">Peer Instruction: In-Class, At-Home, or in MOOCs</h2>
     <p class="mdc-typography--body1">
       Teachers can use the same questions in-class in "polling-mode", or assign those items to students for out-of-class work through their LMS. Instructional designers can access the same server for MOOCs for thousands of students. Teachers can peruse content based on analytics, and get reports for how their students are doing over time.
@@ -97,7 +97,7 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
   </section>
 
   <section>
-    <h1 class="mdc-typography--display3 mdc-theme--background">Take a guided tour</h1>
+    <h1 class="mdc-typography--display3 mdc-theme--background mdc-elevation--z2">Take a guided tour</h1>
     <!-- Faster load time??: https://developers.google.com/youtube/iframe_api_reference#Loading_a_Video_Player -->
     <div>
       <iframe class="embedded-video" width="560" height="315" src="https://www.youtube.com/embed/uW2r0jGNp8I?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -105,7 +105,7 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
   </section>
 
   <section>
-    <h1 class="mdc-typography--display3 mdc-theme--background">SALTISE/S4</h1>
+    <h1 class="mdc-typography--display3 mdc-theme--background mdc-elevation--z2">SALTISE/S4</h1>
     <h2 class="mdc-typography--headline">Vision</h2>
     <p class="mdc-typography--body1">
       SALTISE is a learning community that fosters the development and research of tools and resources for pedagogical innovations as well as bringing together educators (researchers and practitioners) and professional development personnel across the province of Quebec, as well as welcoming national and international partnerships.
@@ -117,7 +117,7 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
   </section>
 
   <section>
-    <h1 class="mdc-typography--display3 mdc-theme--background">Partners</h1>
+    <h1 class="mdc-typography--display3 mdc-theme--background mdc-elevation--z2">Partners</h1>
     <h2 class="mdc-typography--headline">Paragraph title</h2>
     <p class="mdc-typography--body1">
       {% lorem %}
