--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Dalite NG">
     <link rel="icon" href="{% static 'peerinst/img/logo.png' %}">
     <link rel="stylesheet" href="{% static 'peerinst/css/vendor/material-components-web.min.css' %}">
+    <link rel="stylesheet" href="{% static 'peerinst/css/vendor/ionicons.css' %}">
     <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -56,6 +57,9 @@
     <div class="site-content">
       {% block body %}{% endblock %}
     </div>
+
+    {% block footer %}{% endblock %}
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>
         // Fix potential CSRF token conflicts when loading multiple iframes in parallel,
