--- a/peerinst/templates/registration/test.html
+++ b/peerinst/templates/registration/test.html
@@ -12,17 +12,20 @@
 .mdc-toolbar {
   padding-left:0pt;
 }
+.mdc-toolbar__row {
+  min-height: 100px;
+}
 .mdc-typography--caption {
    text-align:center;
 }
 .mdc-typography--display3 {
-  padding-top:20px;
+  padding-top:70px;
   padding-bottom:10px;
   /*margin-bottom: 0px;*/
   position:sticky;
   top:70px;
   z-index: 2;
-  background-image: /*linear-gradient(var(--mdc-theme-background),60%,var(--mdc-theme-background),transparent);*/
+  /*background-image: linear-gradient(var(--mdc-theme-background),60%,var(--mdc-theme-background),transparent);*/
 }
 .embedded-video {
   display:block;
@@ -51,8 +54,18 @@ footer a {
 }
 #scrollprompt {
   position:absolute;
-  bottom:10px;
+  bottom:0px;
   right:20px;
+}
+#nav {
+  font-size:10pt;
+  position:absolute;
+  bottom:0px;
+  left:10px;
+}
+#nav a {
+  color: white;
+  padding-right:20px;
 }
 #animation {
   display:block;
@@ -72,13 +85,14 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
   <div class="mdc-toolbar__row">
     <svg id="animation" width=800 height=80></svg>
     <i id="scrollprompt" class="icon ion-arrow-down-b"></i>
+    <span id="nav"><a href="{% url 'login' %}">Login</a>
+      <a href="{% url 'sign_up' %}">Signup</a>
+      <a href="">EN</a></span>
   </div>
 </header>
 
 <main class="mdc-toolbar-fixed-adjust">
   <section>
-    Login Signup EN/FR
-
     <h1 class="mdc-typography--display3  mdc-theme--background">Introduction</h1>
     <h2 class="mdc-typography--headline">History</h2>
     <p class="mdc-typography--body1">
