body color to secondary for splash

--- a/peerinst/templates/registration/test.html
+++ b/peerinst/templates/registration/test.html
@@ -4,6 +4,9 @@
 
 {% block stylesheets %}
 <style>
+body {
+  color: var(--mdc-theme-secondary);
+}
 .underline {
   overflow:visible;
   position: absolute;
