--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -42,7 +42,8 @@ body {
 }
 .mdc-typography--caption {
   text-align:center;
-  font-size: 14pt;
+  margin-top:16px;
+  font-size: 12pt;
   font-weight: 700;
 }
 .mdc-typography--display3 {
@@ -117,7 +118,7 @@ footer a {
   overflow:visible;
 }
 .count {
-  font-size: 40pt;
+  font-size: 32pt;
 }
 </style>
 {% endcompress %}
@@ -156,20 +157,18 @@ document.styleSheets[0].insertRule(".mdc-toolbar--flexible {--mdc-toolbar-ratio-
     <p class="mdc-typography--body1">
       {% lorem %}
     </p>
-    <br>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         {% for l in disciplines|first %}
         {% if l != "name" %}
         <div class="mdc-layout-grid__cell--span-3">
-          <svg class="stats" id="{{ l }}" width=200 height=200></svg>
+          <svg class="stats" id="{{ l }}" width=150 height=150></svg>
           <div class="mdc-typography--caption mdc-theme--primary">{{ l|capfirst }}</div>
         </div>
         {% endif %}
         {% endfor %}
       </div>
     </div>
-    <br>
     <div class="mdc-chip-set mdc-chip-set--choice">
       {% for d in disciplines %}
       <div id="{{ d.name }}" class="mdc-chip" onclick="update(this,event)" tabindex="0" data-mdc-auto-init="MDCChip">
@@ -333,7 +332,7 @@ function underlines() {
   .attr("x",w)
   .attr("y",0)
   .attr("width",1)
-  .attr("height",150)
+  .attr("height",120)
   .attr("fill",'url(#underlineGradientY)');
 }
 
@@ -626,14 +625,14 @@ for (var i in labels){
   .attr("class","count-background")
   .attr("cx",0)
   .attr("cy",0)
-  .attr("r",80)
+  .attr("r",70)
   .attr("fill","white");
 
   g[i].append("circle")
   .attr("class","count-background")
   .attr("cx",0)
   .attr("cy",0)
-  .attr("r",80)
+  .attr("r",70)
   .attr("opacity",0.2)
   .attr("fill","var(--mdc-theme-primary)");
 
@@ -641,7 +640,7 @@ for (var i in labels){
   .attr("class","count-background")
   .attr("cx",0)
   .attr("cy",0)
-  .attr("r",80)
+  .attr("r",70)
   .attr("stroke","var(--mdc-theme-primary)")
   .attr("stroke-width",1.5)
   .attr("fill",'none');
